feat: return top tweet

--- a/main.ipynb
+++ b/main.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Procesamiento de datos:"
+    "## Procesamiento de datos:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En primer lugar, se cargan los datos mediante la librería `ujson`. Para visualizar de mejor manera los datos, se utiliza la librería `pandas`."
+    "En primer lugar, se cargan los datos mediante la librería `ujson`. Para visualizar y manejar de mejor manera los datos, se utiliza la librería `pandas`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +282,59 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top 10 tweets más retweeted:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_tweets(data):\n",
+    "    top_tweet = data.loc[data['retweetCount'].idxmax()]\n",
+    "    top_tweet_info = f'El tweet más retweeteado es: ' + f'\\\"{top_tweet[\"content\"]}\\\"'\n",
+    "    return top_tweet_info\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El tweet más retweeteado es: \"why aren’t we talking about this?! #FarmersProtest https://t.co/obmIlXhK9S\"'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_tweets(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main"
    ]
   },
   {
