feat: create top_dates
Función que muestra los 10 días con más tweets

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>date</th>\n",
+       "      <th>content</th>\n",
+       "      <th>renderedContent</th>\n",
+       "      <th>id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>outlinks</th>\n",
+       "      <th>tcooutlinks</th>\n",
+       "      <th>replyCount</th>\n",
+       "      <th>retweetCount</th>\n",
+       "      <th>...</th>\n",
+       "      <th>quoteCount</th>\n",
+       "      <th>conversationId</th>\n",
+       "      <th>lang</th>\n",
+       "      <th>source</th>\n",
+       "      <th>sourceUrl</th>\n",
+       "      <th>sourceLabel</th>\n",
+       "      <th>media</th>\n",
+       "      <th>retweetedTweet</th>\n",
+       "      <th>quotedTweet</th>\n",
+       "      <th>mentionedUsers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://twitter.com/ShashiRajbhar6/status/1376...</td>\n",
+       "      <td>2021-03-30T03:33:46+00:00</td>\n",
+       "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
+       "      <td>Support 👇\\n\\n#FarmersProtest</td>\n",
+       "      <td>1376739399593910273</td>\n",
+       "      <td>{'username': 'ShashiRajbhar6', 'displayname': ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1376739399593910273</td>\n",
+       "      <td>en</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>http://twitter.com/download/android</td>\n",
+       "      <td>Twitter for Android</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
+       "      <td>2021-03-30T03:33:23+00:00</td>\n",
+       "      <td>Supporting farmers means supporting our countr...</td>\n",
+       "      <td>Supporting farmers means supporting our countr...</td>\n",
+       "      <td>1376739306287427584</td>\n",
+       "      <td>{'username': 'kaursuk06272818', 'displayname':...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1376739306287427584</td>\n",
+       "      <td>en</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>http://twitter.com/download/android</td>\n",
+       "      <td>Twitter for Android</td>\n",
+       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://twitter.com/kaursuk06272818/status/137...</td>\n",
+       "      <td>2021-03-30T03:31:00+00:00</td>\n",
+       "      <td>Support farmers if you are related to food #St...</td>\n",
+       "      <td>Support farmers if you are related to food #St...</td>\n",
+       "      <td>1376738704128020488</td>\n",
+       "      <td>{'username': 'kaursuk06272818', 'displayname':...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1376738704128020488</td>\n",
+       "      <td>en</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/android\" ...</td>\n",
+       "      <td>http://twitter.com/download/android</td>\n",
+       "      <td>Twitter for Android</td>\n",
+       "      <td>[{'previewUrl': 'https://pbs.twimg.com/media/E...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 url  \\\n",
+       "0  https://twitter.com/ShashiRajbhar6/status/1376...   \n",
+       "1  https://twitter.com/kaursuk06272818/status/137...   \n",
+       "2  https://twitter.com/kaursuk06272818/status/137...   \n",
+       "\n",
+       "                        date  \\\n",
+       "0  2021-03-30T03:33:46+00:00   \n",
+       "1  2021-03-30T03:33:23+00:00   \n",
+       "2  2021-03-30T03:31:00+00:00   \n",
+       "\n",
+       "                                             content  \\\n",
+       "0                       Support 👇\\n\\n#FarmersProtest   \n",
+       "1  Supporting farmers means supporting our countr...   \n",
+       "2  Support farmers if you are related to food #St...   \n",
+       "\n",
+       "                                     renderedContent                   id  \\\n",
+       "0                       Support 👇\\n\\n#FarmersProtest  1376739399593910273   \n",
+       "1  Supporting farmers means supporting our countr...  1376739306287427584   \n",
+       "2  Support farmers if you are related to food #St...  1376738704128020488   \n",
+       "\n",
+       "                                                user outlinks tcooutlinks  \\\n",
+       "0  {'username': 'ShashiRajbhar6', 'displayname': ...       []          []   \n",
+       "1  {'username': 'kaursuk06272818', 'displayname':...       []          []   \n",
+       "2  {'username': 'kaursuk06272818', 'displayname':...       []          []   \n",
+       "\n",
+       "   replyCount  retweetCount  ...  quoteCount       conversationId  lang  \\\n",
+       "0           0             0  ...           0  1376739399593910273    en   \n",
+       "1           0             0  ...           0  1376739306287427584    en   \n",
+       "2           0             0  ...           0  1376738704128020488    en   \n",
+       "\n",
+       "                                              source  \\\n",
+       "0  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "1  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "2  <a href=\"http://twitter.com/download/android\" ...   \n",
+       "\n",
+       "                             sourceUrl          sourceLabel  \\\n",
+       "0  http://twitter.com/download/android  Twitter for Android   \n",
+       "1  http://twitter.com/download/android  Twitter for Android   \n",
+       "2  http://twitter.com/download/android  Twitter for Android   \n",
+       "\n",
+       "                                               media retweetedTweet  \\\n",
+       "0                                               None           None   \n",
+       "1  [{'previewUrl': 'https://pbs.twimg.com/media/E...           None   \n",
+       "2  [{'previewUrl': 'https://pbs.twimg.com/media/E...           None   \n",
+       "\n",
+       "  quotedTweet mentionedUsers  \n",
+       "0        None           None  \n",
+       "1        None           None  \n",
+       "2        None           None  \n",
+       "\n",
+       "[3 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df.head()"
+    "df.head(3)"
    ]
   },
   {
@@ -51,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +311,64 @@
    ],
    "source": [
     "top_users(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top 10 días con más tweets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates_np = df['date'].to_numpy()\n",
+    "\n",
+    "date_list = []\n",
+    "for date in dates_np:\n",
+    "    date_list.append(date.split(\"T\")[0])\n",
+    "\n",
+    "unique, counts = np.unique(np.array(date_list), return_counts=True)\n",
+    "d = dict(zip(unique, counts))\n",
+    "\n",
+    "def keyfunction(k):\n",
+    "    return d[k]\n",
+    "\n",
+    "def top_dates(top_n):\n",
+    "    print(f'Los top {top_n} días con más tweets son:')\n",
+    "    for key in sorted(d, key=keyfunction, reverse=True)[:top_n]:\n",
+    "        print(f'{key}: {d[key]} tweets')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los top 10 días con más tweets son:\n",
+      "2021-02-03: 83866 tweets\n",
+      "2021-02-04: 58607 tweets\n",
+      "2021-02-05: 33332 tweets\n",
+      "2021-02-02: 28548 tweets\n",
+      "2021-02-06: 22420 tweets\n",
+      "2021-02-07: 11325 tweets\n",
+      "2021-02-09: 9320 tweets\n",
+      "2021-02-08: 8920 tweets\n",
+      "2021-02-10: 7973 tweets\n",
+      "2021-02-11: 5698 tweets\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_dates(10)"
    ]
   },
   {
