feat: create top_hashtags
Función que muestra los "n" hashtags más usados

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,29 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Los top 10 usuarios que han emitido más tweets son:\n",
-      "harjot_tweeting: 7134 tweets\n",
-      "tasveersandhu: 2091 tweets\n",
-      "shells_n_petals: 1991 tweets\n",
-      "jot__b: 1841 tweets\n",
-      "rebelpacifist: 1806 tweets\n",
-      "rumsomal: 1722 tweets\n",
-      "Iamjazzie96: 1502 tweets\n",
-      "Jass_k_G: 1460 tweets\n",
-      "DigitalKisanBot: 1453 tweets\n",
-      "z_khalique007: 1446 tweets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_users(10)"
+    "# top_users(10)"
    ]
   },
   {
@@ -322,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,29 +328,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top_dates(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top 10 hashtags más usados:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "content_np = df['content'].to_numpy()\n",
+    "\n",
+    "lista_hashtags = []\n",
+    "for content in content_np:\n",
+    "    finded = re.findall(\"(?<!\\w)#\\w+\", content)\n",
+    "    for elem in finded:\n",
+    "        lista_hashtags.append(elem.upper())\n",
+    "\n",
+    "unique, counts = np.unique(np.array(lista_hashtags), return_counts=True)\n",
+    "dict_hashtags = dict(zip(unique, counts))\n",
+    "\n",
+    "def keyfunction(k):\n",
+    "    return dict_hashtags[k]\n",
+    "\n",
+    "def top_hashtags(top_n):\n",
+    "    print(f'Los top {top_n} hashtags más usados son son:')\n",
+    "    for key in sorted(dict_hashtags, key=keyfunction, reverse=True)[:top_n]:\n",
+    "        print(f'{key}: {dict_hashtags[key]} veces')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Los top 10 días con más tweets son:\n",
-      "2021-02-03: 83866 tweets\n",
-      "2021-02-04: 58607 tweets\n",
-      "2021-02-05: 33332 tweets\n",
-      "2021-02-02: 28548 tweets\n",
-      "2021-02-06: 22420 tweets\n",
-      "2021-02-07: 11325 tweets\n",
-      "2021-02-09: 9320 tweets\n",
-      "2021-02-08: 8920 tweets\n",
-      "2021-02-10: 7973 tweets\n",
-      "2021-02-11: 5698 tweets\n"
+      "Los top 10 hashtags más usados son son:\n",
+      "#FARMERSPROTEST: 425951 veces\n",
+      "#ISTANDWITHFARMERS: 17086 veces\n",
+      "#INDIANFARMERSHUMANRIGHTS: 12176 veces\n",
+      "#STANDWITHFARMERS: 11468 veces\n",
+      "#FARMERSAREINDIA: 11139 veces\n",
+      "#RIHANNA: 9490 veces\n",
+      "#FARMERSPROTESTS: 8910 veces\n",
+      "#FARMERS: 8704 veces\n",
+      "#INDIA: 6629 veces\n",
+      "#SHAMEONBOLLYWOOD: 6445 veces\n"
      ]
     }
    ],
    "source": [
-    "top_dates(10)"
+    "top_hashtags(10)"
    ]
   },
   {
