--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,13 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def top_tweets(data, top_n):\n",
-    "    top_tweet = data.loc[data['retweetCount'].idxmax()]\n",
-    "    # top_tweet_info = f'El tweet más retweeteado es: ' + f'\\\"{top_tweet[\"content\"]}\\\"'\n",
+    "def top_tweets(top_n):\n",
     "    top_tweet_info = df.nlargest(n=top_n, columns=['retweetCount'])\n",
     "    print(f'Los top {top_n} tweets más retwiteados son los siguientes:')\n",
     "    return top_tweet_info\n"
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,29 +370,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Los top 10 hashtags más usados son son:\n",
-      "#FARMERSPROTEST: 425951 veces\n",
-      "#ISTANDWITHFARMERS: 17086 veces\n",
-      "#INDIANFARMERSHUMANRIGHTS: 12176 veces\n",
-      "#STANDWITHFARMERS: 11468 veces\n",
-      "#FARMERSAREINDIA: 11139 veces\n",
-      "#RIHANNA: 9490 veces\n",
-      "#FARMERSPROTESTS: 8910 veces\n",
-      "#FARMERS: 8704 veces\n",
-      "#INDIA: 6629 veces\n",
-      "#SHAMEONBOLLYWOOD: 6445 veces\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_hashtags(10)"
+    "# top_hashtags(10)"
    ]
   },
   {
@@ -406,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
