refactor: change in variable names
Se cambiaron los nombres de las variables "d" y las funciones "keyfunction"

--- a/main.ipynb
+++ b/main.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,15 +273,15 @@
     "    users.append(user['username'])\n",
     "\n",
     "unique, counts = np.unique(np.array(users), return_counts=True)\n",
-    "d = dict(zip(unique, counts))\n",
+    "dict_tweets = dict(zip(unique, counts))\n",
     "\n",
-    "def keyfunction(k):\n",
-    "    return d[k]\n",
+    "def keyfunction_tweets(k):\n",
+    "    return dict_tweets[k]\n",
     "\n",
     "def top_users(top_n):\n",
     "    print(f'Los top {top_n} usuarios que han emitido más tweets son:')\n",
-    "    for key in sorted(d, key=keyfunction, reverse=True)[:top_n]:\n",
-    "        print(f'{key}: {d[key]} tweets')"
+    "    for key in sorted(dict_tweets, key=keyfunction_tweets, reverse=True)[:top_n]:\n",
+    "        print(f'{key}: {dict_tweets[key]} tweets')"
    ]
   },
   {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,15 +313,15 @@
     "    date_list.append(date.split(\"T\")[0])\n",
     "\n",
     "unique, counts = np.unique(np.array(date_list), return_counts=True)\n",
-    "d = dict(zip(unique, counts))\n",
+    "dict_dates = dict(zip(unique, counts))\n",
     "\n",
-    "def keyfunction(k):\n",
-    "    return d[k]\n",
+    "def keyfunction_dates(k):\n",
+    "    return dict_dates[k]\n",
     "\n",
     "def top_dates(top_n):\n",
     "    print(f'Los top {top_n} días con más tweets son:')\n",
-    "    for key in sorted(d, key=keyfunction, reverse=True)[:top_n]:\n",
-    "        print(f'{key}: {d[key]} tweets')"
+    "    for key in sorted(dict_dates, key=keyfunction_dates, reverse=True)[:top_n]:\n",
+    "        print(f'{key}: {dict_dates[key]} tweets')"
    ]
   },
   {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,12 +359,12 @@
     "unique, counts = np.unique(np.array(lista_hashtags), return_counts=True)\n",
     "dict_hashtags = dict(zip(unique, counts))\n",
     "\n",
-    "def keyfunction(k):\n",
+    "def keyfunction_hashtags(k):\n",
     "    return dict_hashtags[k]\n",
     "\n",
     "def top_hashtags(top_n):\n",
     "    print(f'Los top {top_n} hashtags más usados son son:')\n",
-    "    for key in sorted(dict_hashtags, key=keyfunction, reverse=True)[:top_n]:\n",
+    "    for key in sorted(dict_hashtags, key=keyfunction_hashtags, reverse=True)[:top_n]:\n",
     "        print(f'{key}: {dict_hashtags[key]} veces')"
    ]
   },
