docs: added links
Se agregaron las fuentes de donde se obtuvo parte del código

--- a/main.ipynb
+++ b/main.ipynb
@@ -231,6 +231,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fuente: https://datascientyst.com/get-top-10-highest-lowest-values-pandas/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -239,7 +246,7 @@
     "def top_tweets(top_n):\n",
     "    top_tweet_info = df.nlargest(n=top_n, columns=['retweetCount'])\n",
     "    print(f'Los top {top_n} tweets más retwiteados son los siguientes:')\n",
-    "    return top_tweet_info\n"
+    "    return top_tweet_info"
    ]
   },
   {
@@ -256,6 +263,15 @@
    "metadata": {},
    "source": [
     "## Top 10 usuarios con más tweets:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fuentes: \\\n",
+    "https://stackoverflow.com/questions/11902665/top-values-from-dictionary \\\n",
+    "https://stackoverflow.com/questions/28663856/how-to-count-the-occurrence-of-certain-item-in-an-ndarray"
    ]
   },
   {
@@ -338,6 +354,13 @@
    "metadata": {},
    "source": [
     "## Top 10 hashtags más usados:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fuente: https://stackoverflow.com/questions/2678666/regex-to-find-words-that-start-with-a-specific-character"
    ]
   },
   {
